# voicegarage

./: .gitignore  .python-version  Makefile  render.yaml
garage-voice-agent/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
garage-voice-agent/api/: __init__.py  config.py  dependencies.py  livekit_tokens.py  main.py  schemas.py
garage-voice-agent/api/routes/: calls.py  demo.py  sessions.py
garage-voice-agent/api/storage/: call_store.py  demo_data.py
garage-voice-agent/demo_scenarios/: carrosserie.md  handoff_humain.md  informations_incompletes.md  interruption.md  panne_urgente.md  pneus.md  prix_exact.md  revision.md
garage-voice-agent/docs/: api_plan.md  architecture_notes.md  demo_plan.md  frontend_plan.md  telephony_plan.md
garage-voice-agent/frontend/: .env.local.example  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
garage-voice-agent/frontend/app/: layout.tsx  page.tsx
garage-voice-agent/frontend/components/: CallRecordCard.tsx  (+5 more)
garage-voice-agent/prompts/: garage_agent_system.md
garage-voice-agent/schemas/: appointment.schema.json  call_summary.schema.json
garage-voice-agent/src/: __init__.py  agent.py  config.py  dev_runner.py  doctor.py  identity.py  logging_config.py  prompts.py  schemas.py  tts_text.py
garage-voice-agent/tests/: test_api.py  test_bodywork_flow.py  test_call_sheet_state.py  test_handoff_flow.py  test_identity.py  test_price_refusal.py  test_revision_flow.py  test_structured_output.py  test_tire_flow.py  test_tts_text.py  test_urgent_breakdown_flow.py  test_voice_selection.py
(+22 files in other folders)
